--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -4,8 +4,20 @@
   @media (max-width: $tablet-width-only) {
     max-width: 720px;
   }
-
   @media (max-width: $mobile-width-only) {
     max-width: 90%;
+  }
+}
+
+.container--footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 47px;
+  @media (max-width: $tablet-width-only) {
+    display: flex;
+  }
+  @media (max-width: $mobile-width-only) {
+    display: block;
   }
 }
