--- a/source/sass/global/base.scss
+++ b/source/sass/global/base.scss
@@ -1,3 +1,13 @@
+.wrap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.main {
+  flex: 1 0 auto;
+}
+
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -5,7 +15,7 @@ html {
 
 body {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   padding: 0;
   margin: 0 auto;
   font-style: normal;
@@ -13,6 +23,7 @@ body {
   flex-direction: column;
   font-family: "PT Mono", "Courier", monospace;
   font-weight: 400;
+  //position: relative;
 }
 
 a {
