--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,10 @@
+@import "global/normalize.scss";
 @import "global/fonts.scss";
 @import "global/base.scss";
 @import "global/variables.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
+@import "blocks/achievements.scss";
+@import "blocks/about-company.scss";
+@import "blocks/variants.scss";
+@import "blocks/footer.scss";
