--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,7 @@ $black: #000000;
 $dark-grey: #1B2D37;
 $grey: #666666;
 $grey-light: #626962;
+$grey-light-line: #C4C4C4;
 
 $tablet-width: 768px;
 $mobile-width-only: ($tablet-width - 1px);
