--- a/source/sass/global/base.scss
+++ b/source/sass/global/base.scss
@@ -6,6 +6,7 @@
 
 .main {
   flex: 1 0 auto;
+  overflow: hidden;
 }
 
 html {
@@ -23,7 +24,10 @@ body {
   flex-direction: column;
   font-family: "PT Mono", "Courier", monospace;
   font-weight: 400;
-  //position: relative;
+}
+
+.body--overflow-hidden {
+  overflow: hidden;
 }
 
 a {
