--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -50,7 +50,7 @@
   }
   @media (max-width: $mobile-width-only) {
     min-width: 290px;
-    width: 290px;
+    width: 90%;
   }
   h3 {
     font-family: "Roboto Condensed", "Courier", monospace;
@@ -92,6 +92,7 @@
     border: 1px solid $blue;
     padding: 14px 0 14px 17px;
     min-width: 251px;
+    width: 94%;
     &:focus {
       color: $black;
     }
@@ -183,68 +184,68 @@
     padding: 14px 18px 14px 18px;
     width: 295px;
   }
+  @media (max-width: $mobile-width-only) {
+    min-width: 295px;
+    width: 100%;
+  }
 }
 
 .feedback__button-wrap {
   max-width: 570px;
   margin-top: 39px;
   display: flex;
+  align-items: center;
   label {
     position: relative;
     cursor: pointer;
-    display: block;
-    color: rgba(255, 255, 255, 0.8);
+    width: 40%;
+    opacity: 0.8;
+    margin-left: 30px;
+    padding-left: 40px;
     font-size: 14px;
-    line-height: 16px;
-    padding-left: 71px;
-    width: 230px;
-    padding-top: 7px;
-    &::before {
-      content: "";
-      position: absolute;
-      top: 8px;
-      left: 42px;
-      width: 14px;
-      height: 14px;
-      flex-shrink: 0;
-      flex-grow: 0;
-      border: 1px solid $white;
-      @media (max-width: $mobile-width-only) {
-        top: 33px;
-        left: 1px;
-      }
-    }
+    line-height: 15px;
     &:hover {
-      color: $white;
-      border-color: $grey;
-    }
-    @media (max-width: $tablet-width-only) {
-      padding-top: 8px;
-      padding-left: 78px;
+      opacity: 1;
     }
     @media (max-width: $mobile-width-only) {
-      padding-left: 35px;
-      padding-top: 27px;
+      width: 100%;
+      margin-left: 0;
+      margin-top: 30px;
     }
   }
-  input:checked + label::after {
-    position: absolute;
+  input[type="checkbox"] {
+    bottom: 0;
+    right: 0;
+  }
+  input[type="checkbox"] + label::before {
     content: "";
-    top: 13px;
-    left: 46px;
-    width: 9px;
-    height: 6px;
+    position: absolute;
+    left: 12px;
+    top: 0;
+    width: 14px;
+    height: 14px;
+    border: 1px solid $white;
+    background-image: none;
+    @media (max-width: $mobile-width-only) {
+      left: 0;
+    }
+  }
+  input[type="checkbox"]:checked + label::before {
     background-image: url("../img/icon-check.svg");
     background-repeat: no-repeat;
-    opacity: 1;
-    @media (max-width: $mobile-width-only) {
-      top: 38px;
-      left: 5px;
-    }
+    background-position: center;
+  }
+  input[type="checkbox"]:focus + label {
+    outline: 1px dashed $white;
+    outline-offset: 2px;
+  }
+  @media (max-width: $tablet-width-only) {
+    margin-top: 45px;
   }
   @media (max-width: $mobile-width-only) {
-    display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+    min-width: 295px;
+    max-width: 96%;
   }
 }
