--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -32,15 +32,28 @@
   }
 }
 
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-top: 32px;
+  @media (max-width: $tablet-width-only) {
+    margin-top: 0;
+  }
+  @media (max-width: $mobile-width-only) {
+    margin-top: 16px;
+  }
+}
+
 .header__logo {
-  margin-top: 16px;
   @media (max-width: $tablet-width-only) {
     margin-top: 10px;
   }
   @media (max-width: $mobile-width-only) {
     height: 38px;
     width: 38px;
-    margin-top: 8px;
+    margin-top: 0px;
   }
 }
 
@@ -49,10 +62,24 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-end;
-  margin-top: -52px;
   margin-right: 5px;
+  width: 80%;
+  @media (max-width: $tablet-width-only) {
+    width: 72%;
+    margin-right: 0;
+  }
   @media (max-width: $mobile-width-only) {
-    margin-top: -32px;
+    margin-top: -22px;
+  }
+}
+
+.header__contact {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 47%;
+  @media (max-width: $tablet-width-only) {
+    justify-content: flex-end;
   }
 }
 
@@ -71,12 +98,12 @@
 }
 
 .header__link--mail {
-  margin-right: 113px;
+  padding-left: 39px;
   position: relative;
   &::after {
     content: "";
     position: absolute;
-    left: -40px;
+    left: 0;
     top: 2px;
     width: 19px;
     height: 14px;
@@ -89,21 +116,22 @@
     }
   }
   @media (max-width: $tablet-width-only) {
-    margin-right: 28px;
+    padding-left: 78px;
     top: -1px;
   }
   @media (max-width: $mobile-width-only) {
-    margin-right: 17px;
+    margin-right: 70px;
+    padding-left: 0;
   }
 }
 
 .header__link--phone {
   position: relative;
-  margin-right: 48px;
+  padding-left: 35px;
   &::after {
     content: "";
     position: absolute;
-    left: -36px;
+    left: 0;
     top: 0;
     width: 18px;
     height: 18px;
@@ -119,6 +147,10 @@
   }
   @media (max-width: $tablet-width-only) {
     margin-right: 0;
+    padding-left: 5px;
+  }
+  @media (max-width: $mobile-width-only) {
+    padding-left: 0;
   }
 }
 
@@ -148,7 +180,7 @@
 
 .header__text-wrap {
   position: relative;
-  padding-top: 236px;
+  padding-top: 230px;
   h1 {
     text-transform: uppercase;
     font-size: 80px;
@@ -212,22 +244,21 @@
     @media (max-width: $tablet-width-only) {
       width: 465px;
       height: 340px;
-      top: 71px;
+      top: 38px;
       right: -230px;
     }
     @media (max-width: $mobile-width-only) {
       width: 301px;
       height: 220px;
-      top: 60px;
       right: -15px;
     }
   }
   @media (max-width: $tablet-width-only) {
-    padding-top: 147px;
+    padding-top: 113px;
     padding-left: 65px;
   }
   @media (max-width: $mobile-width-only) {
-    padding-top: 255px;
+    padding-top: 233px;
     padding-left: 0;
   }
 }
