--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -56,6 +56,7 @@
   justify-content: space-around;
   width: 62.5%;
   margin: 0 auto;
+  min-width: 1000px;
   a {
     color: $white;
     &:hover {
@@ -77,12 +78,14 @@
   }
   @media (max-width: $tablet-width-only) {
     width: 100%;
+    min-width: 100%;
     display: block;
   }
 }
 
 .variants__item {
   width: 31.3%;
+  margin-bottom: 46px;
   a {
     height: 620px;
     width: 100%;
@@ -116,7 +119,8 @@
   }
   @media (max-width: $mobile-width-only) {
     margin-bottom: 30px;
-    max-width: 290px;
+    min-width: 290px;
+    width: 100%;
   }
 }
 
@@ -137,6 +141,8 @@
       @media (min-resolution: 1.5dppx) {
         background-image: linear-gradient(rgba(27, 45, 55, 0.80), rgba(27, 45, 55, 0.80)), url(../img/circuit-boards-mobile@2x.jpg);
       }
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 }
@@ -158,6 +164,8 @@
       @media (min-resolution: 1.5dppx) {
         background-image: linear-gradient(rgba(27, 45, 55, 0.80), rgba(27, 45, 55, 0.80)), url(../img/cpu-mobile@2x.jpg);
       }
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 }
@@ -179,6 +187,8 @@
       @media (min-resolution: 1.5dppx) {
         background-image: linear-gradient(rgba(27, 45, 55, 0.80), rgba(27, 45, 55, 0.80)), url(../img/led-mobile@2x.jpg);
       }
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 }
