--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -12,6 +12,7 @@
   }
   @media (min-resolution: 1.5dppx) {
     background-image: url("../img/2005-desktop@2x.png");
+    background-size: 220px 317px;
   }
   @media (max-width: $tablet-width-only) {
     margin-top: 0px;
@@ -22,6 +23,7 @@
     background-position: left -25px top -2px;
     @media (min-resolution: 1.5dppx) {
       background-image: url("../img/2005-tablet@2x.png");
+      background-size: 244px 362px;
     }
     span:nth-child(2) {
       display: none;
