--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -130,10 +130,10 @@
 }
 
 .footer__parts-site {
-  //margin-left: -101px;
-  width: 39%;
-  max-width: 495px;
+  width: 42%;
+  max-width: 600px;
   position: relative;
+  margin-left: 95px;
   @media (max-width: $tablet-width-only) {
     margin-left: 0;
     width: auto;
@@ -185,11 +185,11 @@
     }
   }
   ul {
-    grid-template-rows: repeat(4, 1fr);
-    grid-auto-flow: column;
-    display: grid;
+    column-count: 2;
+
     @media (max-width: $tablet-width-only) {
       display: block;
+      column-count: 1;
     }
   }
   a {
