--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -63,7 +63,7 @@
   align-items: center;
   justify-content: flex-end;
   margin-right: 5px;
-  width: 80%;
+  width: 78%;
   @media (max-width: $tablet-width-only) {
     width: 72%;
     margin-right: 0;
@@ -76,8 +76,8 @@
 .header__contact {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  width: 47%;
+  justify-content: flex-end;
+  width: 75%;
   @media (max-width: $tablet-width-only) {
     justify-content: flex-end;
   }
@@ -100,6 +100,7 @@
 .header__link--mail {
   padding-left: 39px;
   position: relative;
+  margin-right: 88px;
   &::after {
     content: "";
     position: absolute;
@@ -113,21 +114,26 @@
     @media (max-width: $tablet-width-only) {
       width: 25px;
       height: 18px;
+      position: relative;
+      display: block;
+      margin-left: 33px;
+      margin-top: 12px;
+    }
+    @media (max-width: $mobile-width-only) {
+      margin-left: 23px;
+      margin-top: 16px;
     }
   }
   @media (max-width: $tablet-width-only) {
-    padding-left: 78px;
-    top: -1px;
-  }
-  @media (max-width: $mobile-width-only) {
-    margin-right: 70px;
-    padding-left: 0;
+    padding-left: 0px;
+    margin-right: 0px;
   }
 }
 
 .header__link--phone {
   position: relative;
   padding-left: 35px;
+  margin-right: 48px;
   &::after {
     content: "";
     position: absolute;
@@ -141,16 +147,19 @@
     @media (max-width: $tablet-width-only) {
       width: 24px;
       height: 24px;
-      left: -19px;
-      top: -2px;
+      position: relative;
+      display: block;
+      margin-left: 33px;
+      margin-top: 12px;
+    }
+    @media (max-width: $mobile-width-only) {
+      margin-left: 23px;
+      margin-top: 16px;
     }
   }
   @media (max-width: $tablet-width-only) {
-    margin-right: 0;
-    padding-left: 5px;
-  }
-  @media (max-width: $mobile-width-only) {
-    padding-left: 0;
+    padding-left: 0px;
+    margin-right: 0px;
   }
 }
 
@@ -241,7 +250,9 @@
     top: 177px;
     right: -75px;
     z-index: -1;
+    width: 49.5%;
     @media (max-width: $tablet-width-only) {
+      position: absolute;
       width: 465px;
       height: 340px;
       top: 38px;
@@ -250,7 +261,7 @@
     @media (max-width: $mobile-width-only) {
       width: 301px;
       height: 220px;
-      right: -15px;
+      left: 12px;
     }
   }
   @media (max-width: $tablet-width-only) {
